# nopain

./: .gitignore  Cargo.toml  README.md
src/: config.rs  erros.rs  main.rs  maintenance.rs
