[package]
name = "nopain"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19" 
serde = {version = "1.0.209", features = ["derive"]}
clap = { version = "4.5.16", features = ["derive"] }
chrono = {version = "0.4.38", features = ["serde"] }
log = "0.4.22"
env_logger = "0.11.5"
colored = "2.1.0"
